--- a/config.yml
+++ b/config.yml
@@ -31,30 +31,30 @@ steps:
   - type: # the type of action, full list at https://lab.github.com/docs/actions
 
 # Step 2: INTERNAL COMMENT FOR STEP 2
-# - title: Insert some data
-#  description: there are a few different ways to do this!
-#  event: # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
-#  actions: # a list of the actions that will occur when the step is triggered by an event
-#  - type: # the type of action, full list at https://lab.github.com/docs/actions
+- title: Insert some data
+  description: there are a few different ways to do this!
+  event: # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
+  actions: # a list of the actions that will occur when the step is triggered by an event
+  - type: # the type of action, full list at https://lab.github.com/docs/actions
 
 # Step 3: INTERNAL COMMENT FOR STEP 3
-# - title: query your data
-#  description: use conditions and projections to get your desired results
-#  event: # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
-#  actions: # a list of the actions that will occur when the step is triggered by an event
-#  - type: # the type of action, full list at https://lab.github.com/docs/actions
+ - title: query your data
+  description: use conditions and projections to get your desired results
+  event: # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
+  actions: # a list of the actions that will occur when the step is triggered by an event
+  - type: # the type of action, full list at https://lab.github.com/docs/actions
 
 # Step 4: INTERNAL COMMENT FOR STEP 4
-# - title: update data
-#  description: now that you know about conditions, you can update specific data
-#  event: # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
-#  actions: # a list of the actions that will occur when the step is triggered by an event
-#  - type: # the type of action, full list at https://lab.github.com/docs/actions
+ - title: update data
+  description: now that you know about conditions, you can update specific data
+  event: # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
+  actions: # a list of the actions that will occur when the step is triggered by an event
+  - type: # the type of action, full list at https://lab.github.com/docs/actions
 
 # Step 5: INTERNAL COMMENT FOR STEP 5
-# - title: delete data
-#  description: now's a great time to learn about transactions!
-#  event: # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
-#  actions: # a list of the actions that will occur when the step is triggered by an event
-#  - type: # the type of action, full list at https://lab.github.com/docs/actions
+ - title: delete data
+  description: now's a great time to learn about transactions!
+  event: # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
+  actions: # a list of the actions that will occur when the step is triggered by an event
+  - type: # the type of action, full list at https://lab.github.com/docs/actions
 
