--- a/config.yml
+++ b/config.yml
@@ -15,10 +15,12 @@ template:
 
 before:
 - type: respond
-  with: 01_first-response.md # the type of action, full list at https://lab.github.com/docs/actions/
-  # some actions require additional options, those should appear below `type:`
-  # you can execute multiple actions in the `before` block
-
+  with: 01_first-response.md 
+  else:
+   - type: respond
+     with: 01_try-again.md
+- type: respond
+  with: 01_nice-work.md
 # Steps for the course
 # A list of steps that take the learner through the course
 # Create one step for each action that a learner will complete
