--- a/config.yml
+++ b/config.yml
@@ -27,14 +27,14 @@ steps:
   event: pull_request.synchronize # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
   actions: # a list of the actions that will occur when the step is triggered by an event
   - type: gate
-    left: '%payload.pull_request.title%'
-    operator: ===
-    right: "Add create-schema.sql"
-      else:
-      - type: respond
-        with: 01_try-again.md
-- type: respond
-  with: 01_nice-work.md
+     left: 'Add create-schema.sql'
+     operator: ===
+     right: master
+     else:
+     - type: respond
+       with: 01_try-again.md
+  - type: respond
+    with: 01_nice-work.md
 
 # Step 2: INTERNAL COMMENT FOR STEP 2
 - title: Insert some data
