--- a/config.yml
+++ b/config.yml
@@ -27,12 +27,12 @@ steps:
   event: pull_request.synchronize # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
   actions: # a list of the actions that will occur when the step is triggered by an event
   - type: gate
-     left: 'Add create-schema.sql'
-     operator: ===
-     right: master
-     else:
-     - type: respond
-       with: 01_try-again.md
+      left: '%payload.pull_request.base.ref%'
+      operator: ===
+      right: master
+      else:
+      - type: respond
+        with: 01_try-again.md
   - type: respond
     with: 01_nice-work.md
 
