--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 title: Introduction to SQL
 tagline: Store your data in a versatile robust manner.
-description: In this course you''ll learn how to create a table, insert data, and query those data.
+description: In this course you''ll learn how to create a table, insert data, and query those data..
 
 # Repository setup
 # The following section template information for the repository
