--- a/config.yml
+++ b/config.yml
@@ -20,21 +20,25 @@ before:
 # A list of steps that take the learner through the course
 # Create one step for each action that a learner will complete
 
-steps:
-# Step 1: INTERNAL COMMENT DESCRIBING STEP 
-- title: Create your first table
-  description: Use SQL to create a table with a few colums
-  event: pull_request.synchronize # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
-  actions: # a list of the actions that will occur when the step is triggered by an event
-  - type: gate
-      left: '%payload.pull_request.base.ref%'
-      operator: ===
-      right: master
-      else:
-      - type: respond
-        with: 01_try-again.md
-  - type: respond
-    with: 01_nice-work.md
+
+steps: 
+  - 
+    actions: 
+      - 
+        else: 
+          - 
+            type: respond
+            with: 01_try-again.md
+        left: "%payload.pull_request.base.ref%"
+        operator: ===
+        right: master
+        type: gate
+      - 
+        type: respond
+        with: 01_nice-work.md
+    description: "Use SQL to create a table with a few colums"
+    event: pull_request.synchronize
+    title: "Create your first table"
 
 # Step 2: INTERNAL COMMENT FOR STEP 2
 #- title: Insert some data
