--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ description: >-
   those data..
 template:
   name: lab-hello-sql
-  repo: false
+  repo: hello-sql
 before:
   - type: respond
     with: 01_first-response.md
