--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,6 @@ description: >-
 template:
   name: lab-hello-sql
   repo: hello-sql
-  description: a blank repo in which to make a scri
 before:
   - type: respond
     with: 01_first-response.md
@@ -15,13 +14,12 @@ steps:
       - else:
           - type: respond
             with: 01_try-again.md
-        left: '%payload.pull_request.base.ref%'
+        left: '%payload.pull_request.title%'
         operator: ===
-        right: master
+        right: Create create-schema.sql
         type: gate
-        every: true
       - type: respond
         with: 01_nice-work.md
-    description: Use SQL to create a table with a few columns
+    description: Use SQL to create a table with a few colums
     event: pull_request.synchronize
     title: Create your first table
